--- a/Primeraentrega.html
+++ b/Primeraentrega.html
@@ -6,6 +6,8 @@
     <title>Entrega</title>
 </head>
 <body>
-    
+    <p>
+        Sirve como imagen de prueba para los algoritmos de compresión de imagen y otras técnicas de procesado de imagen y se ha convertido de facto en un estándar industrial y científico.
+    </p>
 </body>
 </html>
